--- a/Gauss_Law/Gauss_Law.html
+++ b/Gauss_Law/Gauss_Law.html
@@ -291,6 +291,11 @@
       padding-left: 0.5em;
     }
 
+    #display>.section>.block &>ol.compact {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
@@ -566,7 +571,7 @@
         </a>
       </li>
       <li>
-        <a href="#problem-solid-sphere-with-uniform-charge-density" raw="# Problem -- Solid Sphere With Uniform Charge Density" lo="97" class="highlighted">
+        <a href="#problem-solid-sphere-with-uniform-charge-density" raw="# Problem -- Solid Sphere With Uniform Charge Density" lo="97">
           <span class="toctext">Problem – Solid Sphere With Uniform Charge Density</span>
         </a>
       </li>
@@ -867,7 +872,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="97" lf="97" class="highlighted"><a name="problem-solid-sphere-with-uniform-charge-density" number="4" lo="97" raw="# Problem -- Solid Sphere With Uniform Charge Density" class="anchor hanchor" href="#problem-solid-sphere-with-uniform-charge-density"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem – Solid Sphere With Uniform Charge Density</span></a></h1>
+        <h1 lo="97" lf="97"><a name="problem-solid-sphere-with-uniform-charge-density" number="4" lo="97" raw="# Problem -- Solid Sphere With Uniform Charge Density" class="anchor hanchor" href="#problem-solid-sphere-with-uniform-charge-density"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem – Solid Sphere With Uniform Charge Density</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">97</span></div>
       </div>
       <div class="block">
@@ -963,7 +968,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
         <div class="block-info" style="display: none;"><span class="line-numbers">112-131</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="133" lf="133">
+        <div class="inline-html" lo="133" lf="133">
           <div class="newpage">
             <div class="page-break" style="font-size:0px;page-break-after: always;">&nbsp;</div>
             <div></div>
