--- a/Vectors/README.html
+++ b/Vectors/README.html
@@ -551,11 +551,11 @@
   <div id="display">
     <div class="section">
       <div class="block">
-        <p padlength="0" lo="1" lf="1">This activity is intended for use on the first day of class to determine which students need help with basic vector notation and trigonometry.</p>
+        <p padlength="0" lo="1" lf="1" class="active">This 10–minute activity is intended for use on the first day of class to determine which students need help with basic vector notation and trigonometry.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="3" lf="3" class="active">I send emails to students who had difficulty with these problems with the recommendation that based on past experience, they will need to start meeting with an LA or tutor on a weekly basis in order to have a chance of passing.</p>
+        <p padlength="0" lo="3" lf="3">I send emails to students who had difficulty with these problems with the recommendation that based on past experience, they will need to start meeting with an LA or tutor on a weekly basis in order to have a chance of passing.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">3</span></div>
       </div>
     </div>
