--- a/Superposition_and_Symmetry/Superposition_and_Symmetry.html
+++ b/Superposition_and_Symmetry/Superposition_and_Symmetry.html
@@ -291,6 +291,11 @@
       padding-left: 0.5em;
     }
 
+    #display>.section>.block &>ol.compact {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
