--- a/Vectors/Vectors.html
+++ b/Vectors/Vectors.html
@@ -291,6 +291,11 @@
       padding-left: 0.5em;
     }
 
+    #display>.section>.block &>ol.compact {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
@@ -620,7 +625,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">9-10</span></div>
       </div>
       <div class="block">
-        <div class="inline-html" lo="12" lf="25">
+        <div class="inline-html active" lo="12" lf="25">
           <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong type="md">Solution</strong></p>
@@ -637,7 +642,7 @@ c-16-25.333-24-45-24-59z"></path>
                     </div>
                   </div>
                 </li>
-                <li markerlength="3" padlength="0" lo="19" lf="21" class="active">
+                <li markerlength="3" padlength="0" lo="19" lf="21">
                   <div class="block">
                     <p padlength="0"><span len="79" raw="_\bfvec{F} = 2\cos(30^\circ)\ihat + 2\sin(30^\circ)\jhat=\sqrt{3}\ihat + \jhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                             <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
@@ -692,7 +697,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="27" lf="27" class=""><a name="problem-ii" number="2" lo="27" raw="# Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">2</span>&nbsp;<span class="htext">Problem II</span></a></h1>
+        <h1 lo="27" lf="27"><a name="problem-ii" number="2" lo="27" raw="# Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">2</span>&nbsp;<span class="htext">Problem II</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">27</span></div>
       </div>
       <div class="block">
