--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             </a>
           </li>
           <li>
-            <a href="#sound-intensity-level" raw="## Sound Intensity Level" lo="50">
+            <a href="#sound-intensity-level" raw="## Sound Intensity Level" lo="50" class="highlighted">
               <span class="toctext">Sound Intensity Level</span>
             </a>
           </li>
@@ -672,12 +672,12 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law" raw="## Lorentz Force Law" lo="319" class="">
+            <a href="#lorentz-force-law" raw="## Lorentz Force Law" lo="319">
               <span class="toctext">Lorentz Force Law</span>
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="333" class="highlighted">
+            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="333">
               <span class="toctext">Lorentz Force Law on Wires</span>
             </a>
           </li>
@@ -803,7 +803,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="50" lf="50"><a name="sound-intensity-level" number="3.2" lo="50" raw="## Sound Intensity Level" class="anchor hanchor" href="#sound-intensity-level"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Sound Intensity Level</span></a></h2>
+        <h2 lo="50" lf="50" class="highlighted"><a name="sound-intensity-level" number="3.2" lo="50" raw="## Sound Intensity Level" class="anchor hanchor" href="#sound-intensity-level"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Sound Intensity Level</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">50</span></div>
       </div>
       <div class="block">
@@ -823,7 +823,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="54" lf="58">
                   <div class="block">
-                    <p padlength="0" lo="54" lf="58">Documents: | <a href="Sound_Intensity_Level/Sound_Intensity_Level.pdf">pdf</a> | <a href="Sound_Intensity_Level/Sound_Intensity_Level-solutions.pdf">pdf solns</a> | <a href="Sound_Intensity_Level/Sound_Intensity_Level.html">html</a> |</p>
+                    <p padlength="0" lo="54" lf="58" class="">Documents: | <a href="Sound_Intensity_Level/Sound_Intensity_Level.pdf">pdf</a> | <a href="Sound_Intensity_Level/Sound_Intensity_Level-solutions.pdf">pdf solns</a> | <a href="Sound_Intensity_Level/Sound_Intensity_Level.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">54-58</span></div>
                   </div>
                 </li>
@@ -859,7 +859,7 @@ c-16-25.333-24-45-24-59z"></path>
                       </li>
                       <li markerlength="2" padlength="0" lo="68" lf="68">
                         <div class="block">
-                          <p padlength="0" lo="68" lf="68"><a href="https://drive.google.com/file/d/1TrXkPpdcDHBRtA0P0F3ByJHRPrQxwaaw/view?usp=sharing%E2%98%85%E2%98%85%E2%98%85%E2%98%85remove%E2%98%85%E2%98%85%E2%98%85%E2%98%85">Section 17.4 of Halliday and Resnick, 2014, 10th Edition</a> has a better explanation of <span len="7" raw="_I=P/A_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">I</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mord">/</span><span class="mord mathnormal">A</span></span></span></span> and include several diagrams; Sample Problem 17.03 covers an example of a line source of sound, in which case the intensity depends on <span len="5" raw="_1/r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span> insted or <span len="7" raw="_1/r^2_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.0641em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span></span></span></span> as it is for a point source.</p>
+                          <p padlength="0" lo="68" lf="68" class="active"><a href="https://drive.google.com/file/d/1TrXkPpdcDHBRtA0P0F3ByJHRPrQxwaaw/view?usp=sharing%E2%98%85%E2%98%85%E2%98%85%E2%98%85remove%E2%98%85%E2%98%85%E2%98%85%E2%98%85">Section 17.4 of Halliday and Resnick, 2014, 10th Edition</a> has a better explanation of <span len="7" raw="_I=P/A_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">I</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mord">/</span><span class="mord mathnormal">A</span></span></span></span> and include several diagrams; Sample Problem 17.03 covers an example of a line source of sound, in which case the intensity depends on <span len="5" raw="_1/r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span> insted or <span len="7" raw="_1/r^2_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.0641em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span></span></span></span> as it is for a point source.</p>
                           <div class="block-info" style="display: none;"><span class="line-numbers">68</span></div>
                         </div>
                       </li>
@@ -1798,33 +1798,33 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="319" lf="319" class=""><a name="lorentz-force-law" number="3.18" lo="319" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law"><span class="hnumber">3.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <h2 lo="319" lf="319"><a name="lorentz-force-law" number="3.18" lo="319" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law"><span class="hnumber">3.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">319</span></div>
       </div>
       <div class="block">
         <ul lo="321" lf="331" class="compact">
-          <li markerlength="2" padlength="0" lo="321" lf="331" class="">
+          <li markerlength="2" padlength="0" lo="321" lf="333">
             <div class="block">
-              <p padlength="0" lo="321" lf="321" class="">Activity - Lorentz Force on Charged Particles</p>
+              <p padlength="0" lo="321" lf="321">Activity - Lorentz Force on Charged Particles</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">321</span></div>
             </div>
             <div class="block">
               <ul lo="322" lf="331" class="compact">
-                <li markerlength="2" padlength="0" lo="322" lf="322" class="">
+                <li markerlength="2" padlength="0" lo="322" lf="322">
                   <div class="block">
-                    <p padlength="0" lo="322" lf="322" class=""><a href="Lorentz_Force/README.html">Instructor notes</a> </p>
+                    <p padlength="0" lo="322" lf="322"><a href="Lorentz_Force/README.html">Instructor notes</a> </p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">322</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="323" lf="326" class="">
+                <li markerlength="2" padlength="0" lo="323" lf="326">
                   <div class="block">
-                    <p padlength="0" lo="323" lf="326" class="">Documents: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> |</p>
+                    <p padlength="0" lo="323" lf="326">Documents: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">323-326</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="327" lf="331" class="">
+                <li markerlength="2" padlength="0" lo="327" lf="333">
                   <div class="block">
-                    <p padlength="0" lo="327" lf="331" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force/Lorentz_Force.md">Markdown</a> |</p>
+                    <p padlength="0" lo="327" lf="331">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force/Lorentz_Force.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">327-331</span></div>
                   </div>
                 </li>
@@ -1838,21 +1838,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="333" lf="333" class="highlighted"><a name="lorentz-force-law-on-wires" number="3.19" lo="333" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">3.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+        <h2 lo="333" lf="333"><a name="lorentz-force-law-on-wires" number="3.19" lo="333" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">3.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">333</span></div>
       </div>
       <div class="block">
         <ul lo="335" lf="343" class="compact">
-          <li markerlength="2" padlength="0" lo="335" lf="338" class="">
+          <li markerlength="2" padlength="0" lo="335" lf="338">
             <div class="block">
-              <p padlength="0" lo="335" lf="335" class="active">Activity - Lorentz Force on Charged Particles</p>
+              <p padlength="0" lo="335" lf="335">Activity - Lorentz Force on Wires</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">335</span></div>
             </div>
             <div class="block">
               <ul lo="336" lf="338" class="compact">
-                <li markerlength="2" padlength="0" lo="336" lf="338" class="">
+                <li markerlength="2" padlength="0" lo="336" lf="338">
                   <div class="block">
-                    <p padlength="0" lo="336" lf="338" class="">Documents: | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a></p>
+                    <p padlength="0" lo="336" lf="338">Documents: | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a></p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">336-338</span></div>
                   </div>
                 </li>
@@ -1860,9 +1860,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">336-338</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="339" lf="343" class="">
+          <li markerlength="2" padlength="0" lo="339" lf="345">
             <div class="block">
-              <p padlength="0" lo="339" lf="343" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md">Markdown</a> | </p>
+              <p padlength="0" lo="339" lf="343">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">339-343</span></div>
             </div>
           </li>
