--- a/index.html
+++ b/index.html
@@ -1792,7 +1792,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="326" lf="326" class=""><a name="lorentz-force-law" number="3.18" lo="326" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="326"><span class="hnumber">3.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <h2 lo="326" lf="326" class="highlighted"><a name="lorentz-force-law" number="3.18" lo="326" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="326"><span class="hnumber">3.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">326</span></div>
       </div>
       <div class="block">
@@ -1806,7 +1806,7 @@ c-16-25.333-24-45-24-59z"></path>
               <ul lo="329" lf="339" class="compact">
                 <li markerlength="2" padlength="0" lo="329" lf="329" class="">
                   <div class="block">
-                    <p padlength="0" lo="329" lf="329" class=""><a href="Lorentz_Force/README.html">Instructor notes</a> </p>
+                    <p padlength="0" lo="329" lf="329" class="active"><a href="Lorentz_Force/README.html">Instructor notes</a></p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">329</span></div>
                   </div>
                 </li>
@@ -1832,7 +1832,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="341" lf="341" class="highlighted"><a name="lorentz-force-law-on-wires" number="3.19" lo="341" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires" lf="341"><span class="hnumber">3.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+        <h2 lo="341" lf="341" class=""><a name="lorentz-force-law-on-wires" number="3.19" lo="341" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires" lf="341"><span class="hnumber">3.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">341</span></div>
       </div>
       <div class="block">
@@ -1854,7 +1854,7 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">344-348</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="349" lf="353" class="active">
+          <li markerlength="2" padlength="0" lo="349" lf="353" class="">
             <div class="block">
               <p padlength="0" lo="349" lf="353" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">349-353</span></div>
