--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             </a>
           </li>
           <li>
-            <a href="#sound-intensity-level" raw="## Sound Intensity Level" lo="50" class="">
+            <a href="#sound-intensity-level" raw="## Sound Intensity Level" lo="50" class="highlighted">
               <span class="toctext">Sound Intensity Level</span>
             </a>
           </li>
@@ -789,7 +789,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="44" lf="50" class="">
                   <div class="block">
-                    <p padlength="0" lo="44" lf="48">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Electric_Force">Github</a> | <a href="Logarithms/Logarithms.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="44" lf="48" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Electric_Force">Github</a> | <a href="Logarithms/Logarithms.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">44-48</span></div>
                   </div>
                 </li>
@@ -803,7 +803,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="50" lf="50" class=""><a name="sound-intensity-level" number="3.2" lo="50" raw="## Sound Intensity Level" class="anchor hanchor" href="#sound-intensity-level"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Sound Intensity Level</span></a></h2>
+        <h2 lo="50" lf="50" class="highlighted"><a name="sound-intensity-level" number="3.2" lo="50" raw="## Sound Intensity Level" class="anchor hanchor" href="#sound-intensity-level"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Sound Intensity Level</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">50</span></div>
       </div>
       <div class="block">
@@ -823,7 +823,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="58" lf="63" class="">
                   <div class="block">
-                    <p padlength="0" lo="58" lf="62">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Electric_Force">Github</a> | <a href="Sound_Intensity_Level/Sound_Intensity_Level.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="58" lf="62" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Electric_Force">Github</a> | <a href="Sound_Intensity_Level/Sound_Intensity_Level.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">58-62</span></div>
                   </div>
                 </li>
@@ -833,7 +833,7 @@ c-16-25.333-24-45-24-59z"></path>
           </li>
           <li markerlength="2" padlength="0" lo="64" lf="73">
             <div class="block">
-              <p padlength="0" lo="64" lf="65">Background material:</p>
+              <p padlength="0" lo="64" lf="65" class="active">Background material:</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">64-65</span></div>
             </div>
             <div class="block">
@@ -853,7 +853,7 @@ c-16-25.333-24-45-24-59z"></path>
                       </li>
                       <li markerlength="2" padlength="0" lo="67" lf="67">
                         <div class="block">
-                          <p padlength="0" lo="67" lf="67"><a href="https://drive.google.com/file/d/1TrXkPpdcDHBRtA0P0F3ByJHRPrQxwaaw/view?usp=sharing%E2%98%85%E2%98%85%E2%98%85%E2%98%85remove%E2%98%85%E2%98%85%E2%98%85%E2%98%85">Section 17.4 of Halliday and Resnick, 2014, 10th Edition</a> has a better explanation of <span len="7" raw="_I=P/A_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">I</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mord">/</span><span class="mord mathnormal">A</span></span></span></span> and include several diagrams; Sample Problem 17.03 covers an example of a line source of sound, in which case the intensity depends on <span len="5" raw="_1/r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span> insted or <span len="7" raw="_1/r^2_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.0641em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span></span></span></span> as it is for a point source.</p>
+                          <p padlength="0" lo="67" lf="67" class=""><a href="https://drive.google.com/file/d/1TrXkPpdcDHBRtA0P0F3ByJHRPrQxwaaw/view?usp=sharing%E2%98%85%E2%98%85%E2%98%85%E2%98%85remove%E2%98%85%E2%98%85%E2%98%85%E2%98%85">Section 17.4 of Halliday and Resnick, 2014, 10th Edition</a> has a better explanation of <span len="7" raw="_I=P/A_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">I</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mord">/</span><span class="mord mathnormal">A</span></span></span></span> and include several diagrams; Sample Problem 17.03 covers an example of a line source of sound, in which case the intensity depends on <span len="5" raw="_1/r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span> insted or <span len="7" raw="_1/r^2_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.0641em;vertical-align:-0.25em;"></span><span class="mord">1/</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span></span></span></span> as it is for a point source.</p>
                           <div class="block-info" style="display: none;"><span class="line-numbers">67</span></div>
                         </div>
                       </li>
@@ -928,7 +928,7 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">76-85</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="86" lf="90">
+          <li markerlength="2" padlength="0" lo="86" lf="90" class="">
             <div class="block">
               <p padlength="0" lo="86" lf="86">Background material:</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">86</span></div>
@@ -1792,7 +1792,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="326" lf="326" class="highlighted"><a name="lorentz-force-law" number="3.18" lo="326" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="326"><span class="hnumber">3.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <h2 lo="326" lf="326" class=""><a name="lorentz-force-law" number="3.18" lo="326" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="326"><span class="hnumber">3.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">326</span></div>
       </div>
       <div class="block">
@@ -1806,7 +1806,7 @@ c-16-25.333-24-45-24-59z"></path>
               <ul lo="329" lf="339" class="compact">
                 <li markerlength="2" padlength="0" lo="329" lf="329" class="">
                   <div class="block">
-                    <p padlength="0" lo="329" lf="329" class="active"><a href="Lorentz_Force/README.html">Instructor notes</a></p>
+                    <p padlength="0" lo="329" lf="329" class=""><a href="Lorentz_Force/README.html">Instructor notes</a></p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">329</span></div>
                   </div>
                 </li>
