--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             </a>
           </li>
           <li>
-            <a href="#sound-intensity-level" raw="## Sound Intensity Level" lo="50" class="highlighted">
+            <a href="#sound-intensity-level" raw="## Sound Intensity Level" lo="50" class="">
               <span class="toctext">Sound Intensity Level</span>
             </a>
           </li>
@@ -632,7 +632,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#electric-flux" raw="## Electric Flux" lo="213" class="">
+            <a href="#electric-flux" raw="## Electric Flux" lo="213" class="highlighted">
               <span class="toctext">Electric Flux</span>
             </a>
           </li>
@@ -783,7 +783,7 @@ c-16-25.333-24-45-24-59z"></path>
               <ul lo="39" lf="48" class="compact">
                 <li markerlength="2" padlength="0" lo="39" lf="43">
                   <div class="block">
-                    <p padlength="0" lo="39" lf="43">Documents: | <a href="Logarithms/Logarithms.pdf">pdf</a> | <a href="Logarithms/Logarithms-solutions.pdf">pdf solns</a> | <a href="Logarithms/Logarithms.html">html</a> |</p>
+                    <p padlength="0" lo="39" lf="43" class="">Documents: | <a href="Logarithms/Logarithms.pdf">pdf</a> | <a href="Logarithms/Logarithms-solutions.pdf">pdf solns</a> | <a href="Logarithms/Logarithms.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">39-43</span></div>
                   </div>
                 </li>
@@ -803,7 +803,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="50" lf="50" class="highlighted"><a name="sound-intensity-level" number="3.2" lo="50" raw="## Sound Intensity Level" class="anchor hanchor" href="#sound-intensity-level"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Sound Intensity Level</span></a></h2>
+        <h2 lo="50" lf="50" class=""><a name="sound-intensity-level" number="3.2" lo="50" raw="## Sound Intensity Level" class="anchor hanchor" href="#sound-intensity-level"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Sound Intensity Level</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">50</span></div>
       </div>
       <div class="block">
@@ -833,7 +833,7 @@ c-16-25.333-24-45-24-59z"></path>
           </li>
           <li markerlength="2" padlength="0" lo="64" lf="73">
             <div class="block">
-              <p padlength="0" lo="64" lf="65" class="active">Background material:</p>
+              <p padlength="0" lo="64" lf="65" class="">Background material:</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">64-65</span></div>
             </div>
             <div class="block">
@@ -1275,7 +1275,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="163" lf="169" class="">
                   <div class="block">
-                    <p padlength="0" lo="163" lf="167">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/rhat">Github</a> | <a href="rhat/rhat.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="163" lf="167" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/rhat">Github</a> | <a href="rhat/rhat.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">163-167</span></div>
                   </div>
                 </li>
@@ -1455,7 +1455,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="213" lf="213" class=""><a name="electric-flux" number="3.10" lo="213" raw="## Electric Flux" class="anchor hanchor" href="#electric-flux"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
+        <h2 lo="213" lf="213" class="highlighted"><a name="electric-flux" number="3.10" lo="213" raw="## Electric Flux" class="anchor hanchor" href="#electric-flux"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">213</span></div>
       </div>
       <div class="block">
@@ -1521,7 +1521,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="231" lf="233" class="">
                   <div class="block">
-                    <p padlength="0" lo="231" lf="231" class="">Videos:</p>
+                    <p padlength="0" lo="231" lf="231" class="active">Videos:</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">231</span></div>
                   </div>
                   <div class="block">
